# WasmEdge-go

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE  go.mod
lib/include/wasmedge/: version.h
wasmedge/: BUILD.bazel  instance.go
