load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wasmedge",
    srcs = [
        "ast.go",
        "async.go",
        "callframe.go",
        "cgo.go",
        "chostfunc.go",
        "cli.go",
        "compiler.go",
        "configure.go",
        "executor.go",
        "hostfunc.go",
        "instance.go",
        "limit.go",
        "loader.go",
        "log.go",
        "plugin.go",
        "result.go",
        "statistics.go",
        "store.go",
        "string.go",
        "validator.go",
        "value.go",
        "version.go",
        "vm.go",
    ],
    cgo = True,
    cdeps = ["//:wasmedge_lib"],
    copts = [
        "-Ilib/include/wasmedge",
    ],
    clinkopts = ["-Llib/linux-aarch64/", "-ldl", "-lm", "-pthread", "-lstdc++"],
    importpath = "github.com/second-state/WasmEdge-go/wasmedge",
    visibility = ["//visibility:public"],
)

go_test(
    name = "wasmedge_test",
    srcs = ["limit_test.go"],
    embed = [":wasmedge"],
)
